--- a/styles/fielsd/index.css
+++ b/styles/fielsd/index.css
@@ -1,3 +1,6 @@
+@import url(droparea.css);
+
+
 input, textarea, select {
   appearance: none;
   width: 100%;
@@ -12,12 +15,13 @@ label {
   color: var(--text-secondary);
 
   display: block;
-  margin-top: .25rem;
+  margin-bottom: .25rem;
 }
 
 input:focus,
 select:focus,
-textarea:focus {
+textarea:focus,
+input[type="date"]:focus-within {
   outline: .25rem solid var(--surface-secondary);
   border: .125rem solid var(--stroke-hightlight);
   outline-offset: .1px;
@@ -32,7 +36,7 @@ input[type="date"] {
   &::before {
     content: "";
     position: absolute;
-    background: url(/assets/icons/calendar-03.svg);
+    background: url(/assets/icons/calendar-03.svg)
     center/contain;
     right: 1rem;
     width: 1.25rem;
