--- a/styles/forms.css
+++ b/styles/forms.css
@@ -18,3 +18,9 @@ legend {
 fieldset + fieldset {
   margin-top: 3rem;
 }
+
+.acctions-wrapper {
+  margin-top: 3rem;
+  display: flex;
+  gap: 1rem;
+}
